2008-03-13	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #6999: Add sorting for comments
	* Fixed bug #7645: after entering bad code from captcha "content" is not loaded again into textarea
	* Fixed bug #7849: Grammar error in error.no.ts.template label

2008-02-25 Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug: tt_news marker cannot be localized

2008-02-21 Dmitry Dulepov  <dmitry@typo3.org>

	* Added URL log for future "List" feature
	* Changed storagePid to be a list of values (for "List" feature)

2008-02-20 Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #7593: Firstname replaced by Lastname
	* Fixed bug #7574: Pagebrowser ###LINK_LAST### not rendered

2008-02-14 Dmitry Dulepov  <dmitry@typo3.org>

	* Added lots of hooks
	* Released version 1.3.0

2008-02-06 Dmitry Dulepov  <dmitry@typo3.org>

	* Added stdWrap properties for comment entries

2008-02-06 Dmitry Dulepov  <dmitry@typo3.org>

	* Added posibility to output only number of votes (without text) in tt_news marker
	* Updated function index on several files
	* Updated documentation
	* Fixed bug #7102: Hyperlinks in comments text
	* Fixed bug #7144: Day of week does not come out when server locale differs from website language
	* Fixed bug #7154: Translation strings cannot be implemented using TS because of 'dots' in the label index
	* Fixed bug #7156: Flexform value for 'comments per page' overrides value in TS setup
	* Fixed bug #7157: Flexform value for 'templateFile' overrides value in TS setup
	* Released version 1.2.0

2008-02-05 Dmitry Dulepov  <dmitry@typo3.org>

	* Added ratings for comments (through "ratings" extension)
	* Release of version 1.1.0

2008-01-28 Dmitry Dulepov  <dmitry@typo3.org>

	* Finished prefill form with FE user data

2008-01-25 Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #7104: impossible to select template from flexform
	* New feature (untested!): prefill form with FE user data

2008-01-24 Dmitry Dulepov  <dmitry@typo3.org>
