@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes" ?>
 <!-- $Id: locallang_csh.xml 200 2007-09-29 20:49:42Z dima $ -->
 <T3locallang>
-    <meta type="array">
-        <description>Additional CSH labels</description>
-        <type>CSH</type>
-        <csh_table>tt_news</csh_table>
-        <fileId>EXT:comments/locallang_csh.xml</fileId>
-        <labelContext type="array">
-        </labelContext>
-    </meta>
-    <data type="array">
-        <languageKey index="default" type="array">
-            <label index="external_ref.description">Commented record</label>
-            <label index="external_ref.details">Displays commented record. Never change this field manually!</label>
-            <label index="external_ref.seeAlso"></label>
-            <label index="approved.description">Approval status</label>
-            <label index="approval.details">Comments must be approved by system or moderator in order to be displayed. Check this box to approve comments.</label>
-            <label index="approval.seeAlso"></label>
-            <label index="firstname.description">First name</label>
-            <label index="firstname.details">Commenter's first name.</label>
-            <label index="firstname.seeAlso"></label>
-            <label index="lastname.description">First name</label>
-            <label index="lastname.details">Commenter's last name.</label>
-            <label index="lastname.seeAlso"></label>
-            <label index="email.description">E-mail</label>
-            <label index="email.details">Commenter's e-mail.</label>
-            <label index="email.seeAlso"></label>
-            <label index="location.description">Location</label>
-            <label index="location.details">Commenter's location (where he comes from).</label>
-            <label index="location.seeAlso"></label>
-            <label index="homepage.description">Web site</label>
-            <label index="homepage.details">Commenter's web site.</label>
-            <label index="homepage.seeAlso"></label>
-            <label index="content.description">Comment</label>
-            <label index="content.details">This is a text as entered by commenter.</label>
-            <label index="content.seeAlso"></label>
-            <label index="remote_addr.description">IP address</label>
-            <label index="remote_addr.details">This is the IP address of the host from which this comment was made. If you plan to use this information for access limitation, check that it is not a proxy or you can block lots of innocent people.</label>
-            <label index="remote_addr.seeAlso"></label>
-        </languageKey>
-    </data>
+	<meta type="array">
+		<description>Additional CSH labels</description>
+		<type>CSH</type>
+		<csh_table>tt_news</csh_table>
+		<fileId>EXT:comments/locallang_csh.xml</fileId>
+		<labelContext type="array">
+		</labelContext>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="external_ref.description">Commented record</label>
+			<label index="external_ref.details">Displays commented record. Never change this field manually!</label>
+			<label index="external_ref.seeAlso"></label>
+			<label index="approved.description">Approval status</label>
+			<label index="approval.details">Comments must be approved by system or moderator in order to be displayed. Check this box to approve comments.</label>
+			<label index="approval.seeAlso"></label>
+			<label index="firstname.description">First name</label>
+			<label index="firstname.details">Commenter's first name.</label>
+			<label index="firstname.seeAlso"></label>
+			<label index="lastname.description">Last name</label>
+			<label index="lastname.details">Commenter's last name.</label>
+			<label index="lastname.seeAlso"></label>
+			<label index="email.description">E-mail</label>
+			<label index="email.details">Commenter's e-mail.</label>
+			<label index="email.seeAlso"></label>
+			<label index="location.description">Location</label>
+			<label index="location.details">Commenter's location (where he comes from).</label>
+			<label index="location.seeAlso"></label>
+			<label index="homepage.description">Web site</label>
+			<label index="homepage.details">Commenter's web site.</label>
+			<label index="homepage.seeAlso"></label>
+			<label index="content.description">Comment</label>
+			<label index="content.details">This is a text as entered by commenter.</label>
+			<label index="content.seeAlso"></label>
+			<label index="remote_addr.description">IP address</label>
+			<label index="remote_addr.details">This is the IP address of the host from which this comment was made. If you plan to use this information for access limitation, check that it is not a proxy or you can block lots of innocent people.</label>
+			<label index="remote_addr.seeAlso"></label>
+		</languageKey>
+	</data>
 </T3locallang>
