@@ -3,6 +3,7 @@
 	* Fixed bug #6999: Add sorting for comments
 	* Fixed bug #7645: after entering bad code from captcha "content" is not loaded again into textarea
 	* Fixed bug #7849: Grammar error in error.no.ts.template label
+	* Fixed bug #7491: Typos in pi1/locallang_csh.xml
 
 2008-02-25 Dmitry Dulepov  <dmitry@typo3.org>
 
